# generation-service

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/: config.py  depends.py  exceptions.py  main.py
src/api/v1/endpoints/: generator.py  health.py  prompts.py  responses.py
src/llm/: client.py
src/migrations/: env.py
src/migrations/versions/: e7c18c62adc1_initial.py  fc1898594d11_initial.py
src/models/: prompt.py
src/repositories/: base.py  prompt.py
src/schemas/: generator.py  health.py  prompt.py  response.py  responses.py
src/services/: assistant.py  generator.py  prompt.py  unit_of_work.py
src/utils/: session_manager.py
